--- a/templates/views/404error.hbs
+++ b/templates/views/404error.hbs
@@ -16,7 +16,7 @@
                 <div class="row">
                     <div class="col-md-12 col-12 main_header_left align-items-center">
                         <img src="image\w5.png">
-                        <p>Welcome to WEATHER technical.</p>
+                        <h1>😇😇Please Register or Login for detalis.</h1>
                         <h2>{{error}}</h2>
                         <a href="/"><button>HOME PAGE</button></a>
                     </div>
