--- a/templates/partials/headerlink.hbs
+++ b/templates/partials/headerlink.hbs
@@ -13,6 +13,6 @@
 <!-- Latest compiled JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="css/style.css">
-
+<link rel="stylesheet" href="css/login.css">
 <link rel="stylesheet" href="css/about.css">
 <title>WEATHER</title>
