--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -1,6 +1,6 @@
 <div class="container-fluid main_menu">
     <div class="row">
-        <div class="col-md-10 col-12 mx-auto">
+        <div class="col-md-12 col-12 mx-auto">
 
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="#"><span class="weather">WEATHER</span></a>
@@ -23,6 +23,18 @@
                             <a class="nav-link" href="/about">About Us</a>
                         </li>
 
+                        <li class="nav-item">
+                            <a class="nav-link" href="/register">Register</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="/login">Login</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="/logout">Logout</a>
+                        </li>
+                    </ul>
                 </div>
             </nav>
 
