--- a/templates/views/weather.hbs
+++ b/templates/views/weather.hbs
@@ -30,7 +30,8 @@
                     <div class="main_layer">
                         <p id="city_name">Get output here</p>
                         <div class="middle_layer">
-                            <p id="temp"><span id="temp_real_val">Temp</span><sup>o</sup>C</p>
+                            <p id="temp"><span id="temp_real_val">Temp</span><sup id="c">o</sup>C</p>
+                            <p id="temp_status">😊</p>
 
                         </div>
                     </div>
