--- a/public/css/style.css
+++ b/public/css/style.css
@@ -170,6 +170,10 @@ footer p {
     font-family: "Roboto", sans-serif;
 }
 
+#temp_status {
+    color: skyblue;
+}
+
 .top_layer {
     width: 100%;
     height: 20%;
